fixed visible top line on iphone 5

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -321,7 +321,7 @@ input {
     top: 0;
     right: 0;
     width: 100%;
-    height: 8%;
+    height: 10%;
     background: white;
 }
 
